# notebooks

./: .gitignore  Untitled.ipynb  bok.slides.html  bok_single.html  checkbox_button_group.html  first_glyphs.html  numba_guide.ipynb  plotting_tools.ipynb  pyproject.toml  slider.html  test.html  test_convert.html  test_convert.ipynb  tmp.cprof  tmp.html  tmp.ipynb  tmp.py  tmp2.txt
.ipynb_checkpoints/: bok-checkpoint.ipynb
data_analysis/: .exchanges.py.swp  .tmp.py.swp  cac40components.py  data_analysis.py  data_scratch.ipynb  exchanges.ipynb  exchanges.py  scratch.py  statsmodels.html  statsmodels.ipynb  tmp.ipynb  tmp.py
dev/: .scratch.py.swp  .scratch2.py.swp  scratch.py  scratch2.py  tmp.ipynb
notebooks/: dataclass_guide.ipynb  datetime_guide.ipynb  exception_guide.ipynb  file_types.ipynb  files.ipynb  filework_guide.ipynb  inheritance.ipynb  inheritance_guide.ipynb  math.ipynb  numba_guide.ipynb  numpy_guide.ipynb  oop_inheritance_guide.ipynb  pandas_guide.ipynb  pandas_xarray_guide.ipynb  parallel.ipynb  parallel_guide.ipynb  plotting_guide.ipynb  profiling_guide.ipynb  python_general.ipynb  string_parsing.ipynb  strings.ipynb  web.ipynb  web_scrapping_guide.ipynb  xarray_guide.ipynb
plotting/: plotly_guide.ipynb
quant/: quant_scratch_2.html  untitled.txt
quant_notebooks/: cvxpy_optimization.ipynb  linear_models.ipynb  linear_tsa.ipynb  markov_chain_models.ipynb  neural_networks.ipynb  nonlinear_ML_sklearn.ipynb  prob_stat_ols.ipynb  pytorch_NN.ipynb  state_space_models.ipynb
src/: pathlib_src.py  plotting.py
src/pathlib_rsrc/: binary_file2  test_yaml.yml
src/pathlib_rsrc/zip_extract/home/vlad/projects/notebooks/src/pathlib_rsrc/: binary_file  text_file.txt
