[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "*"
pyyaml = "^5.3.1"
requests = "^2.24.0"
bokeh = "^2.1.1"
ipympl = "^0.5.7"
ipywidgets = "^7.5.1"
mpld3 = "^0.5.1"
nbsphinx = "^0.7.1"
ipykernel = "^5.3.4"
pandas = "^1.1.0"
plotly = "^4.9.0"
matplotlib = "3.1.0"
seaborn = "^0.10.1"
psutil = "^5.7.2"
qplot = {path = "../qplot/dist/qplot-0.1.1.tar.gz"}
pytools = {path = "../pytools/dist/pytools-0.1.0.tar.gz"}
lark-parser = "^0.9.0"
bs4 = "^0.0.1"
lxml = "^4.5.2"
html5lib = "^1.1"

[tool.poetry.dev-dependencies]
ipython = "*"
jupyter = "*"
pytest = "*" 
black = {version = "^19.10b0", allow-prereleases = true}
rope = "^0.17.0"
matplotlib = "3.1.0"
rise = "^5.6.1"
pyprof2calltree = "^1.4.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
